# hentai-sync

./: .gitignore  README.md  config_example.json  main.py  pyproject.toml
