[tool.poetry]
name = "hentai-sync"
version = "0.1.0"
description = ""
authors = ["Pedro Antonio <anomalityinbox@gmail.com>"]
license = "GNU General Public License v3.0"

[tool.poetry.dependencies]
python = "^3.10"
PyDrive = "^1.3.1"
praw = "^7.5.0"
colorama = "^0.4.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
